--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="44dp"
-        android:text="GD-Developers"
+        android:text="GD-DEVELOPERS"
         android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toBottomOf="@+id/imageView8" />
@@ -93,7 +93,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:srcCompat="@drawable/codeimage" />
+        app:srcCompat="@drawable/dataimage" />
 
     <ImageView
         android:id="@+id/imageView19"
@@ -104,9 +104,10 @@
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/imageView18"
-        app:srcCompat="@drawable/dataimage" />
+        app:srcCompat="@drawable/imagesimage" />
 
     <ImageView
         android:id="@+id/imageView20"
@@ -120,7 +121,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18"
-        app:srcCompat="@drawable/imagesimage" />
+        app:srcCompat="@drawable/videosimage" />
 
     <ImageView
         android:id="@+id/imageView21"
@@ -142,7 +143,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="#C6512F"
+        android:background="@drawable/rounded_gradient"
         android:text="CUSTOMIZE DASHBOARD"
         android:textColor="@android:color/white"
         android:textSize="18sp"
